# jscsdk

./: .gitignore  README.md  __init__.py  pyproject.toml
.github/workflows/: python-app.yml  python-publish.yml
sdk/: classtry.py  customthreat.py  devices.py  idp.py  restclient.py  uemc.py  ztna.py
tests/: test_first_test.py
