[project]
name = "JSCSDK"
version = "0.0.1"
authors = [
  { name="Dan Cuddeford", email="dancudds@gmail.com" },
]
description = "Just something to help with JSC"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://jamf.com"
